updated at: 2023-04-25 22:30, VRChat想定3Dモデル『フォレストカーバンクル』 - Neqizm - BOOTH

--- a/VRChat/58/1270358.html
+++ b/VRChat/58/1270358.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iK5NEnMrxHWcxUSWZuzNUxLqk6Dm9/1Leh/N4W+P34g="></script>
+    "5Mr7cMQifjCtudeps1PhrcVlIayBYCrjvDP6o0gw/kM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定3Dモデル『フォレストカーバンクル』","description":"本データはVRChat,Unityでのご利用を想定した3Dキャラクターモデル、フォレストカーバンクル族の女の子です。\n三角ポリゴン換算で31,604ポリゴン、シェイプキーはVRC用含め58個となっております。\n個人制作ゲーム等、他の用途にも利用可能です。\n\n髪・尻尾・羽等の装飾にDynamicBoneの数値設定がすでになされていますが、お好みでご調整ください。\n\nデフォルトでの適用シェーダーはUTS2v2.0.6となっております。","url":"https://booth.pm/ja/items/1270358","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/7d19caf7-8413-4b46-abe2-17f1a8dd9250/i/1270358/954ec484-91bc-488d-99a6-05c1212f2251_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iK5NEnMrxHWcxUSWZuzNUxLqk6Dm9/1Leh/N4W+P34g="></script>
+    nonce="5Mr7cMQifjCtudeps1PhrcVlIayBYCrjvDP6o0gw/kM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1270358/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1270358/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
