--- a/VRChat/42/1270942.html
+++ b/VRChat/42/1270942.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Qj2+1pTFQ+ILfgDGVAZugZa52ZawdlqmhGbq7j5BM64="></script>
+    "DAyMYzECRKiQpj3uX0D4Aufm0UNFJndKlaLm94/Cm7c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GPWeaponsバージョン01","description":"きまぐれで生まれた武器セット\n欲しかったアノ武器（バズーカ・フリントロック式・ホビーピストル・ガトリングなど）を詰めたものでございます！\n\n現在まだ、モデル単体のみが入っている状況ではありますが、後ほど動きなどの梱包をしようかと検討していますのでお楽しみに。\n\nGPの素体に持たせてやってくださるとゆづきちが喜びます。","url":"https://booth.pm/ja/items/1270942","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1270942/74db5b6f-7466-44c7-bd21-d189306e6e26_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Qj2+1pTFQ+ILfgDGVAZugZa52ZawdlqmhGbq7j5BM64="></script>
+    nonce="DAyMYzECRKiQpj3uX0D4Aufm0UNFJndKlaLm94/Cm7c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1270942/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              321
+                              320
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1270942/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              321
+                              320
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
