updated at: 2023-04-25 22:31, VRoid ヘアプリセット ふわふわツインテール - sugar moon - BOOTH

--- a/VRChat/79/1271379.html
+++ b/VRChat/79/1271379.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Efe2KrBTzJBWHo2ZWmN6Tsq+9riaJkS5ZIBhbvLT5zU="></script>
+    "9bE77yDh6ujvuWauY1n8p81ike6OdpXIVPKlD7bXlxY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoid ヘアプリセット ふわふわツインテール","description":"VroidStudioに対応しているモデルデータです。\n髪揺れ設定済みです。\n価格は変更される場合があります。\n\n\n○\n・モデルの改造\n・モデルの商用利用\n\n×\n・モデルを他者に対する誹謗中傷目的で使用すること\n・モデルを再配布すること\n・モデルを改造したものを販売すること\n\n\n3Dアバター ツインテール　ヘアプリセット","url":"https://booth.pm/ja/items/1271379","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/b6b64116-9927-4407-88d2-c9fb93ab1a96/i/1271379/f8d7c630-aadf-4969-8bfd-a95ebc2a31d6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Efe2KrBTzJBWHo2ZWmN6Tsq+9riaJkS5ZIBhbvLT5zU="></script>
+    nonce="9bE77yDh6ujvuWauY1n8p81ike6OdpXIVPKlD7bXlxY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1271379/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              140
+                              139
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1271379/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              140
+                              139
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
