updated at: 2023-04-25 22:32, オリジナル3Dモデル『モクモクラン』 - クレープたべたい - BOOTH

--- a/VRChat/09/1271309.html
+++ b/VRChat/09/1271309.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "H4fg0NT58IdU5JQJCQcTT2bPh3yDbKmDFpKRMiqEIvM="></script>
+    "WvlItz3vwcqwe40Rmt4XemUWBJig1oafxJnFc0n3aSg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『モクモクラン』","description":"\n※SDK3､VCC未対応です\n\n\nいつも眠そうな角っ子メイドです。\n\nVRChatでのアバター利用を想定して作成された、3Dモデルになります。\nVRChatに限らず、ゲームや映像作品、動画配信等その他の用途にもご利用いただけます。\n\n\n素体付き\nポリゴン数　　　　　　　△14130\nマテリアル数　　　　　　5\nリップシンク　　　　　　20種（VRchat用15種+あいうえお5種）\nアイトラッキング　　　　非対応\nフルボディトラッキング　対応\n表情アニメーション　　　7種設定済み\nDynamicBone   　　　　　設定済み\n\n[内容物]\n・mokumokulan.fbx\nモデルデータです。\n\n・mokumokulan_blender.fbx\nブレンダーでインポートしやすいよう調整されたモデルデータです。\nボーン方向の自動整列、シェイプキーのリネーム作業をしてあります。\n\n・各種psd、pngデータ\nテクスチャデータです\n\n・mokumokulan.unitypackage\nVRChatを想定したセットアップを行ったモデルデータが入っているユニティパッケージです\nUnityにて、VRCSDK、DynamicBone（任意）がインポートされたプロジェクトにインポートしてください。\n\nまたユニティパッケージ内の同梱シェーダーとして\nsynqark様のArktoon-Shaders-1.0.2.6を同梱しています\n\n\n◆利用規約◆\n本モデルを購入した時点で利用規約に同意したものとします。\n本規約は変更される場合があり、最新のものが適用されます。\n\n・本モデルデータ、及び改造モデルの著作権はびよらに帰属するものとします。\n\n・本モデル、改造モデルをVRChat等のアバターアップロード機能のあるサービスにおいて、\nアップロードし、アバターとして利用することを許可します。\n\n・上記サービスにおいて、購入者本人以外がアバターとして利用可能な状態にすることを禁止します。\n\n・上記サービスにおいて、購入者本人以外がアバターとして利用できない状態であれば、改造モデルをワールドのNPCやオブジェクトとして設置すること許可します。\n\n・本モデル、改造モデルの再配布、販売を禁止します。\n\n・本モデル、改造モデルをアプリケーションやゲーム、映像作品、動画配信等に使用することを許可します。収益化等に制限はありません。\n\n・モデルを使用する際のクレジット表記の記載は必要ありません。\n\n・R-18・R-18Gへの使用は制限しませんが、発表の場や利用サービスでの規約を守り、使用してください。\n\n・政治、宗教活動、特定個人や団体への誹謗中傷を目的とした使用を禁止します。\n\n\n■ 免責事項\n・当モデル、改造モデルを使用することで生じた何らかのトラブル、損失に対して、びよら一切責任を負わないものとします。\n\n--------------------------------------------\n・更新履歴\nv1.01  不具合修正　同梱ArktoonShadersを1.0.2.6に更新\nv1.02　VRCSDK2の更新に伴い、Unity2018でもアバターをアップロードできるよう対応（textureにStreaming Mip Mapsを適用）\n\n--------------------------------------------\n制定日：2019年3月12日\n\nTwitter：@hakoniworks\n","url":"https://booth.pm/ja/items/1271309","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/f8d17b37-95cd-4878-8129-85e31c98cf4e/i/1271309/f213aa4b-0dd5-4a55-9f01-6731d5637656_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="H4fg0NT58IdU5JQJCQcTT2bPh3yDbKmDFpKRMiqEIvM="></script>
+    nonce="WvlItz3vwcqwe40Rmt4XemUWBJig1oafxJnFc0n3aSg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1271309/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               569
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1271309/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               569
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
