updated at: 2023-04-25 22:32, 【VRChat向け】牙狼斬馬剣(風)モデル Ver.2 - Kanae&#39;s Garage - BOOTH

--- a/VRChat/09/1271009.html
+++ b/VRChat/09/1271009.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jibCKMRnGJ1SSKDdI2sdYVxObMwwTq7FtS7ju6pLRoU="></script>
+    "3jCL3zGsxrebDHDIBMfgEuhI9S6Wu0LiyuZSfFxN9js="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】牙狼斬馬剣(風)モデル Ver.2","description":"知る人ぞ知るあの牙狼が扱う、斬馬剣をイメージして作った大剣のモデルになっております。\n飽くまで「風」ですので、完全再現ではありません。\n\n\n2019/04/03\nデータの一部を更新し、質感を向上させました。\nお手数ですが再DLの程お願いします。","url":"https://booth.pm/ja/items/1271009","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a1a684d4-f6f7-445a-ae6e-becb249b10d5/i/1271009/885a8c44-1a94-4971-828c-624859cba9a9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jibCKMRnGJ1SSKDdI2sdYVxObMwwTq7FtS7ju6pLRoU="></script>
+    nonce="3jCL3zGsxrebDHDIBMfgEuhI9S6Wu0LiyuZSfFxN9js="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1271009/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               136
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1271009/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               136
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
