--- a/VRChat/24/1270924.html
+++ b/VRChat/24/1270924.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iX7BOt9Qk0zIl1hZNgYb8EmxdvtLHHspol8g8Xp4zL0="></script>
+    "j79VdakVlyUU16sLVKqPoH6jhjaa8y69a0ShRT/YtGE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"蛇モチーフの指輪・腕輪（三角面630、三角面1142）","description":"蛇モチーフの指輪・腕輪の3Dモデル（Unity用）","url":"https://booth.pm/ja/items/1270924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"128"},"image":"https://booth.pximg.net/c/620x620/35eda33f-5f5b-4dec-bda5-d25adcc391d1/i/1270924/2b3aaa7b-24c9-45bd-af8d-fec01faba076_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iX7BOt9Qk0zIl1hZNgYb8EmxdvtLHHspol8g8Xp4zL0="></script>
+    nonce="j79VdakVlyUU16sLVKqPoH6jhjaa8y69a0ShRT/YtGE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1270924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1270924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
