--- a/VRChat/63/1270863.html
+++ b/VRChat/63/1270863.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Wwa5JSiVfhQGwyiA/D3+h1mtrrfnmh1s8Rkw8GiDgwU="></script>
+    "fw+6Tl0VooHCLdNqzOe4gVp/f3HTmCjUCwqYoCj9Ia0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"セフィが頭に付けてるスチームパンクゴーグル ver1.1.0","description":"僕が売っているモデル、セフィが頭につけてるスチームパンク風味のゴーグルです。\n　かけられるタイプのゴーグルが好きなのになぜか誰もつけている人がいませんでした。変だなと思っていたのですが、「作るのが死ぬほど面倒だから」ということが発覚し、なら配布すっかということにしました。そういう経緯です。好きに使ってください。\nなお、セフィにはまったく同じゴーグルが付属しているので、セフィを買ってくださった方は買わなくても大丈夫です。\n\n一応投げ銭もできます。してくれたら僕が次のモデルも頑張って作ります。\n\n改造したものかどうかに限らず、再配布OKです。\nただし、できれば僕にデータを下さい。ほしいので。\n再配布にあたり、金銭のやり取りの発生することは全面的に禁止とします。\nこれを付けての配信、動画制作、登場するゲームを作る、すべて可能です。それによって得た金銭を請求することはありません。\nこの規約はのちに変更される可能性があります。\n\n\nこのモデルに関しての苦情などは、基本的に受け付けていません。ご了承ください。\n\n追記：マットキャップ画像入れ忘れてたんで追加しました。\n\n追追記：ゴーグルのベルト部分にボーンを入れて調整しやすくしました。","url":"https://booth.pm/ja/items/1270863","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/0d2468c0-1ae0-44e4-9281-c6f1646d3f41/i/1270863/326308e2-fa61-4982-ad05-183f6f1be0c3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Wwa5JSiVfhQGwyiA/D3+h1mtrrfnmh1s8Rkw8GiDgwU="></script>
+    nonce="fw+6Tl0VooHCLdNqzOe4gVp/f3HTmCjUCwqYoCj9Ia0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -120,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1270863/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               155
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1270863/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               155
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
