updated at: 2023-04-25 22:33, (キャノン）3Dモデル - mushsroompie - BOOTH

--- a/VRChat/56/1270756.html
+++ b/VRChat/56/1270756.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jJZIsC6dvZjp6+PjiWl7buB9YqsPI5H+pzMvkC5sSfc="></script>
+    "bKBIFXjp65uIG3fbquISUFSEDVg03/s8OIDjo3goQWU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"(キャノン）3Dモデル","description":"これは(キャノン）3Dモデルです\n\n-内容物\n-RockmanEXE_Cannon.fbx\n-RockmanEXE_Cannon_Texture.png\n-RockmanEXE_Cannon_UV.png\n-UnityPackage\n-RockmanEXE_Cannon.blend\n-Arktoon-Shader\n\nこのモデルはArktoon-Shaderを使用しております。\n\nVRchat用を想定して作っていますが、ゲームやアニメーション、配信などでも使えます。\n\n-改変について\n-[(キャノン）3Dモデル]とそれに関連したデータの改変は自由です。\n\n[(キャノン）3Dモデル]とその付属のモデルデータ・テクスチャーデータの再配付・販売は改変の有無を問わず禁止します。\nVRchatのアバターペデスタルなど、購入者以外が[(キャノン）3Dモデル]を自由に使用できるようにする行為を禁止します。\nまた、特定個人や団体への誹謗中傷、政治、宗教活動を目的とした利用を禁止します。","url":"https://booth.pm/ja/items/1270756","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/4d13e485-5af6-4f8e-88c4-0a6e1dd3fe70/i/1270756/77d3cbc5-f6f2-4930-b01c-a434250a6915_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jJZIsC6dvZjp6+PjiWl7buB9YqsPI5H+pzMvkC5sSfc="></script>
+    nonce="bKBIFXjp65uIG3fbquISUFSEDVg03/s8OIDjo3goQWU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1270756/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1270756/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
