--- a/VRChat/28/1270728.html
+++ b/VRChat/28/1270728.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "v7GfaDksnI1NN+Px/bD/ziWMm/wsV/Vq5RkWf9tS8OM="></script>
+    "mo6WUB/OTVCNKTNZb9PvTve2yWgFZZstfRjZsBHzwH4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"初心者、高齢者マークセット","description":"無料配布している初心者マークのほかに\n\n・過去に作った初心者マーク２種類\n・サブスタでも色をいじりやすくした最新版\n・高齢者マーク（新、旧）\n\nをいれました\n規約は無料版と変わらないので、そちらを参照してください\n\nアクセサリーとして使うもよし、初心者マークでアバターを作るでもよし\nいろいろな使い方があるので、ぜひ自分だけのマークの使い方を見つけてください","url":"https://booth.pm/ja/items/1270728","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ad349ea1-c320-473c-933d-01a50c9c733f/i/1270728/b5191668-7ff4-4cf2-8b4e-4ac3f47fe9c2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v7GfaDksnI1NN+Px/bD/ziWMm/wsV/Vq5RkWf9tS8OM="></script>
+    nonce="mo6WUB/OTVCNKTNZb9PvTve2yWgFZZstfRjZsBHzwH4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1270728/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1270728/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
