updated at: 2023-04-25 22:33, ノマキューブ / Noma cube【3Dモデル/モーション】 - 渡篠処 BOOTH拠点 - BOOTH

--- a/VRChat/17/1268317.html
+++ b/VRChat/17/1268317.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EQl56S8jxaRJHkqP4KqebcMgIoeNWSPk5L5J+D8RnR8="></script>
+    "l3DPhzNnL5jUVQSydmbkJMJlAYHg8Yll96rC/m6YxrM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ノマキューブ / Noma cube【3Dモデル/モーション】","description":"無限に立方体が展開し続ける不思議なキューブ、通称 \"ノマキューブ\" (パタパタ立方体、カレイドキューブとも) の3DCGモデルです。\nパタパタ動き続けるアニメーション付き、改変しやすいテクスチャPSDファイルを同梱していますので自由なカスタマイズが可能です。\nまた、動くたびに全体が軽く揺れるアニメーションファイルも付属しています。\n\nℹFANBOX支援者向けに同ファイルを配布しています。そちらもご確認ください。\nhttps://www.pixiv.net/fanbox/creator/17346029/post/315773\n\n - - -\n\nIt is a 3DCG model of a mysterious cube called \"Noma cube\" (Pattera cube, Kaleido cube, etc.), which is continues to expand in infinity.\nIt is possible to customize it freely because it is bundled with an animation that keeps moving and an easily modifiable texture PSD file.\nIn addition, animation file that the whole lightly shakes with each movement is attached.\n\nℹThe file is distributed to FANBOX supporters. Please check that also.\nhttps://www.pixiv.net/fanbox/creator/17346029/post/315773","url":"https://booth.pm/ja/items/1268317","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1268317/5d2e0ef1-9dc0-4d16-809f-ae41a9dfc236_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EQl56S8jxaRJHkqP4KqebcMgIoeNWSPk5L5J+D8RnR8="></script>
+    nonce="l3DPhzNnL5jUVQSydmbkJMJlAYHg8Yll96rC/m6YxrM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268317/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268317/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
