--- a/VRChat/25/1270625.html
+++ b/VRChat/25/1270625.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "a//NCWU2xXapu03wN6S25mV1yRMvomTHi3D4TGUW5VE="></script>
+    "RqVOoClD3RZYucvsS3oJ1V5udxlMAFNOQlWscDA+/+4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【 VRChat小道具】耳かき","description":"【 VRChat小道具】耳かき\n\n◆構成\nfbx\npng\nunitypackage\n\n\n◆規約\n2次配布 以外には 何でもオッケー\n\n\n◆コンタクト\nDiscord - uNeet#4844","url":"https://booth.pm/ja/items/1270625","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/10729499-4006-459a-9c53-6fb101167cb3/i/1270625/53f0d5de-e129-4e25-bb30-51fa04622e0b_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a//NCWU2xXapu03wN6S25mV1yRMvomTHi3D4TGUW5VE="></script>
+    nonce="RqVOoClD3RZYucvsS3oJ1V5udxlMAFNOQlWscDA+/+4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1270625/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               64
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1270625/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               64
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
