updated at: 2023-04-25 22:33, VRC用落下Animation - 天鵞絨雑貨 - BOOTH

--- a/VRChat/93/1269393.html
+++ b/VRChat/93/1269393.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DCEbhTzL2ntqPzX9EHvgVVnObRFiAhKev3sYyY0z56k="></script>
+    "CvrJ1uRr/cY4KJlfPAV2Ib/W59SquwmlqkRop1goTV0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC用落下Animation","description":"\n\n◆◆◆　概要　◆◆◆\nVRChatのAnimationOverrideのうち、Fall（落下中移動キーを押しているときのモーション）での使用を想定したアニメーションです。\nサンプル画像ではS.I.N様のFailure（https://tomori-hikage.booth.pm/items/995244）を使わせていただいてますが、Humanoidならば多少の差異あれど動作すると思います。\n\n無料版とBoost版の内容に違いはありません。\n\n\n◆◆◆　内容物　◆◆◆\nFall.anim\nアニメーション本体です。\nInspectorでLoop Time、及びLoop Poseにチェックを入れるといい感じに動くかもしれません。\nそのまま導入する際は、AnimationOverrideのFallの項目にドラッグ＆ドロップすればOKです（４枚目の画像参照）\n\n\n◆◆◆　利用規約　◆◆◆\n・このデータは自由に改変していただいて構いません。\n\n・このデータは商用・非商用問わずご利用いただけます。\n\n・このデータ単体での再配布を禁止します。\n\n・このデータを用いたことで発生したいかなる問題についても当方は一切責任を負いません。\n\n\n\n◆◆◆　お問い合わせ　◆◆◆\n何か問題があればツイッターアカウントにリプライやダイレクトメッセージをお願いします。\n\nTwitter：@Velude_Archer\n\n\n\n2019/03/11　販売開始","url":"https://booth.pm/ja/items/1269393","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5a9babbc-9806-4e11-96bb-37f1ee1318c2/i/1269393/45a747e1-c733-4cc0-bc8d-02328bf3ad7a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DCEbhTzL2ntqPzX9EHvgVVnObRFiAhKev3sYyY0z56k="></script>
+    nonce="CvrJ1uRr/cY4KJlfPAV2Ib/W59SquwmlqkRop1goTV0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1269393/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               449
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1269393/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               449
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
