updated at: 2023-04-25 22:34, bisy式パンジャンドラム - bisy`s shop - BOOTH

--- a/VRChat/91/1269991.html
+++ b/VRChat/91/1269991.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZAlJBLsjqwgVj97CP0Mi/eTLtYN8fOFCnL94KJnZ7V0="></script>
+    "ReveCqCgwlog9zBPgtWoHDY4TO+ApF6D9MQvufAz0xI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"bisy式パンジャンドラム","description":"「bisy式パンジャンドラム」モデルです。\n\n△5052ポリゴン\n\n内容物\nUnityPackage\nfbxファイル\nテクスチャファイル\n\n良識の範囲内でご自由にお使いください。\n\n改変，改造OK\n無償の範囲内での再配布OK","url":"https://booth.pm/ja/items/1269991","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1269991/e8d38098-18ae-4c9d-931f-399a75a19f2d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZAlJBLsjqwgVj97CP0Mi/eTLtYN8fOFCnL94KJnZ7V0="></script>
+    nonce="ReveCqCgwlog9zBPgtWoHDY4TO+ApF6D9MQvufAz0xI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1269991/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1269991/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
